# dt-auth-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  develop-build-and-deploy.sh  production-build-and-deploy.sh  push-docker.sh
migrations/2019-07-24-053745_users/: up.sql
migrations/2019-10-30-031723_user_payout_id/: down.sql  up.sql
migrations/2019-12-10-040847_user_is_deleted/: down.sql  up.sql
migrations/2020-03-20-015116_payout_split_id/: down.sql  up.sql
migrations/2020-03-20-015744_following_stores_ids/: down.sql  up.sql
migrations/2020-04-02-102001_following_stores/: down.sql  up.sql
migrations/2020-04-02-104328_last_seen/: down.sql  up.sql
migrations/2020-04-18-040247_last_visited/: down.sql  up.sql
migrations/2020-05-12-123126_user_licenses/: down.sql  up.sql
scripts/: auth.js  client_login.py
src/: lib.rs
src/db/: mod.rs  schema.rs
src/utils/: dates.rs  hashkey.rs  mod.rs
