[package]
name = "dt-user-service"
version = "0.23.13"
authors = ["Peita Lin <n6378056@gmail.com>"]
edition = "2018"

[lib]
# The name of the library that will be generated: common modules used in this app.
# This defaults to the name of the [package], with any dashes replaced
# with underscores. (Rust `extern crate` declarations reference this name)
name = "dt"
# This field points at where the crate is located, relative to the `Cargo.toml`.
path = "src/lib.rs"

[dependencies]
actix-rt = "1.0.0"
actix-cors = "0.3.0-alpha.1"
actix-identity = "0.3.0-alpha.1"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "2.0.0"
actix = "0.10.0-alpha.2"
actix-http = { version = "2.0.0-alpha.2", features = ["actors"] }

base64 = "0.11.0"
bytes = "0.5.4"
bugsnag = "0.2.1"
data-encoding = "2.1.2"
dotenv = "0.15.0"

failure = "0.1.6"
failure_derive = "0.1.6"
futures = "0.3.4"
futures-util = "0.3.4"
jsonwebtoken = "7.0.1"

lazy_static = "1.4.0"
log = "0.4.8"
num = "0.2.1"
nanoid = "0.3.0"

pretty_env_logger = "0.4.0"
proptest = "0.9.5"

regex = "1.3.4"
ring = "0.16.19"
redis = "0.15.1"

serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
serde_qs = "0.5.2"

uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.10.0"
validator_derive = "0.10.0"


[dependencies.diesel]
version = "1.4.3"
features = ["postgres", "chrono", "serde_json", "uuid", "r2d2"]


[dependencies.chrono]
version = "0.4.10"
features = ["serde"]




[dev-dependencies]
